--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,7 @@ tqdm==4.67.1
     # via unet (pyproject.toml)
 urllib3==2.6.2
     # via requests
+
+torch~=2.9.1+cu128
+opencv-python~=4.12.0.88
+numpy~=2.2.6
